# difference-generator

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  decoder.py  dict_normalize.py  difference_generator.py  difference_node.py  format.py  formatter.py  gendiff.py  gendiff_parts.py  get_gendiff_parts.py  loader.py  normalizer.py  parser.py
gendiff/formatters/: common.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
pytest/: pyproject.toml
pytest/tests/: test_gendiff_flat_json.py  test_gendiff_flat_yaml.py  test_gendiff_json.py  test_gendiff_plain.py  test_gendiff_recursive_json.py  test_gendiff_style.py  test_gendiff_yaml.py  test_json.py  test_plain.py  test_stylish.py
pytest/tests/fixtures/: file2.yml
tests/: conftest.py  test_formatter.py  test_gendiff_exceptions.py  test_json.py  test_loader.py  test_parser.py  test_plain.py  test_stylish.py  test_yaml_plain.py  test_yaml_stylish.py
tests/fixtures/: expected_json.txt  expected_json_json.txt  expected_json_yaml.txt  file.txt  file1.yml  file3.yml  file4.yml  stylish2.txt
