[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Gendiff compares two configuration files and outputs a list of differences"
license = "Proprietary"
authors = ["Luybov Nikitina <zluyba.nikitina@gmail.com>"]
readme = "README.md"
repository = "https://github.com/zluuba/python-project-50"
packages = [
    {include = "gendiff"}
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
