[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Comparison of two files, output differences list"
license = "Proprietary"
authors = ["Luybov Nikitina <zluyba.nikitina@gmail.com>"]
readme = "README.md"
repository = "https://github.com/zluuba/python-project-50"
packages = [{include = "gendiff"}]
classifiers = [
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Text Processing"
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.9"
pytest-cov = "^4.0.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
